--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/datetimepicker": "^3.0.3",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^5.9.7",
+    "amazon-cognito-identity-js": "^4.5.0",
+    "aws-amplify": "^3.3.4",
+    "aws-amplify-react-native": "^4.2.7",
     "axios": "^0.20.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
