--- a/package.json
+++ b/package.json
@@ -18,16 +18,23 @@
     "aws-amplify": "^3.3.4",
     "aws-amplify-react-native": "^4.2.7",
     "axios": "^0.20.0",
+    "link-preview-js": "^2.0.5",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-beautiful-video-recorder": "^2.0.1",
+    "react-native-camera": "^3.40.0",
     "react-native-dropdownalert": "^4.3.0",
     "react-native-elements": "^2.3.2",
+    "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-popup-menu": "^0.15.9",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-spinkit": "^1.5.1",
+    "react-native-uuid-generator": "^6.1.1",
     "react-native-vector-icons": "^7.1.0",
+    "react-native-video": "^5.1.0-alpha8",
     "react-navigation": "^4.4.2",
     "react-navigation-stack": "^2.8.4",
     "react-redux": "^7.2.1",
