Added fb and google sign in

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,4 +16,8 @@ target 'ClassroomX' do
   post_install do |installer|
     flipper_post_install(installer)
   end
+
+  
+  pod 'Firebase/Analytics'
+
 end
