--- a/ios/ClassroomX/Info.plist
+++ b/ios/ClassroomX/Info.plist
@@ -2,32 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-  <!-- Required with iOS 10 and higher -->
-  <key>NSCameraUsageDescription</key>
-  <string>Your message to user when the camera is accessed for the first time</string>
-
-  <!-- Required with iOS 11 and higher: include this only if you are planning to use the camera roll -->
-  <key>NSPhotoLibraryAddUsageDescription</key>
-  <string>Your message to user when the photo library is accessed for the first time</string>
-
-  <!-- Include this only if you are planning to use the camera roll -->
-  <key>NSPhotoLibraryUsageDescription</key>
-  <string>Your message to user when the photo library is accessed for the first time</string>
-
-  <!-- Include this only if you are planning to use the microphone for video recording -->
-  <key>NSMicrophoneUsageDescription</key>
-  <string>Your message to user when the microphone is accessed for the first time</string>
-  
-  <key>NSLocationWhenInUseUsageDescription</key>
-  <string>Your message to user when the photo library is accessed for the first time</string>
-  
-  <key>NSLocationAlwaysUsageDescription</key>
-  <string>Your message to user when the photo library is accessed for the first time</string>
-  
-  <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-  <string>Your message to user when the photo library is accessed for the first time</string>
-  
-  
+	<key>NSCameraUsageDescription</key>
+	<string>Your message to user when the camera is accessed for the first time</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Your message to user when the photo library is accessed for the first time</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Your message to user when the photo library is accessed for the first time</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Your message to user when the microphone is accessed for the first time</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Your message to user when the photo library is accessed for the first time</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Your message to user when the photo library is accessed for the first time</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Your message to user when the photo library is accessed for the first time</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -46,19 +34,41 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+  
+  
 	<key>CFBundleURLTypes</key>
 	<array>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLName</key>
-			<string>com.classroomx</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>classroomx</string>
-			</array>
-		</dict>
+    <dict>
+         <key>CFBundleTypeRole</key>
+         <string>Editor</string>
+         <key>CFBundleURLSchemes</key>
+         <array>
+             <string>ShareMedia</string>
+         </array>
+     </dict>
+    <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>fb4901209176586152</string>
+      </array>
+    </dict>
+    
+    <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>com.googleusercontent.apps.258964835294-i53i7573hb90f4r7a2at8e9qk20talnb</string>
+      </array>
+    </dict>
 	</array>
+  
+  
+  <key>FacebookAppID</key>
+  <string>4901209176586152</string>
+  <key>FacebookDisplayName</key>
+  <string>Sidebrain</string>
+  
+  
+  
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
