--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/datetimepicker": "^3.0.3",
+    "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^5.9.7",
     "amazon-cognito-identity-js": "^4.5.0",
@@ -21,16 +22,21 @@
     "link-preview-js": "^2.0.5",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-audiowaveform": "^2.0.5",
     "react-native-beautiful-video-recorder": "^2.0.1",
     "react-native-camera": "^3.40.0",
     "react-native-dropdownalert": "^4.3.0",
     "react-native-elements": "^2.3.2",
+    "react-native-fast-image": "^8.3.4",
+    "react-native-fbsdk": "^3.0.0",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-popup-menu": "^0.15.9",
     "react-native-reanimated": "^1.13.1",
+    "react-native-receive-sharing-intent": "^1.0.5",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
+    "react-native-sound-player": "^0.10.5",
     "react-native-spinkit": "^1.5.1",
     "react-native-uuid-generator": "^6.1.1",
     "react-native-vector-icons": "^7.1.0",
@@ -38,7 +44,8 @@
     "react-navigation": "^4.4.2",
     "react-navigation-stack": "^2.8.4",
     "react-redux": "^7.2.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
