--- a/ios/SidebrainShare/SidebrainShare.entitlements
+++ b/ios/SidebrainShare/SidebrainShare.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.classroomx</string>
+		<string>group.co.sidebrain.app.testflight</string>
 	</array>
 </dict>
 </plist>
