--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-native-audiowaveform": "^2.0.5",
     "react-native-beautiful-video-recorder": "^2.0.1",
     "react-native-camera": "^3.40.0",
+    "react-native-draggable-dynamic-flatlist": "^1.0.4",
+    "react-native-draggable-flatlist": "^2.5.1",
     "react-native-dropdownalert": "^4.3.0",
     "react-native-elements": "^2.3.2",
     "react-native-fast-image": "^8.3.4",
